--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
+    "apexcharts": "3.15.2",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "ng-apexcharts": "1.5.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "ng-apexcharts": "1.5.0",
-    "apexcharts": "3.15.2"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
