--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apexcharts": "3.15.2",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.6.0",
     "ng-apexcharts": "1.5.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
